new features added on the left side of the app with new changes on chart

--- a/ecoTrack/src/components/dashboardcontent.module.css
+++ b/ecoTrack/src/components/dashboardcontent.module.css
@@ -4,8 +4,8 @@
 
 .imageContainer {
   position: relative;
-  width: 715px;
-  height: 145px;
+  width: 70%;
+  /* height: auto; */
 }
 
 .headerImage {
