--- a/ecoTrack/src/components/topbar.module.css
+++ b/ecoTrack/src/components/topbar.module.css
@@ -6,6 +6,10 @@
   padding-right: 3rem;
 }
 
+.container h1 {
+  font-size: 1.875rem;
+}
+
 .completeRightSide {
   display: flex;
   align-items: center;
