--- a/ecoTrack/src/components/chart.module.css
+++ b/ecoTrack/src/components/chart.module.css
@@ -1,8 +1,10 @@
 .chartFrame {
   margin-top: 1rem;
-  padding: 1rem 0.75rem;
+  padding: 0rem 0.75rem;
+  padding-right: 0;
   background-color: #f9f9f9;
-  width: 70%;
+  border-radius: 8px;
+  width: 100%;
   display: flex;
   gap: 20px;
 }
