--- a/ecoTrack/src/components/leftsidechart.module.css
+++ b/ecoTrack/src/components/leftsidechart.module.css
@@ -1,8 +1,7 @@
 .category {
   display: flex;
-  flex: 1;
   justify-content: space-between;
-  width: 20%;
+  width: 60%;
   border: 1px solid #dadada;
   border-radius: 8px;
 }
@@ -10,13 +9,16 @@
 .category2 {
   display: flex;
   margin-top: 1.125rem;
-  padding-left: 45px;
+  /* margin-left: 45px; */
+  border-radius: 8px;
+  border: 1px solid #dadada;
   width: 100%;
 }
 
 .topChartBar {
   width: 100%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 20px;
 }
@@ -45,6 +47,9 @@
 }
 
 .leftFrame {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 60%;
 }
 
@@ -65,7 +70,7 @@
   gap: 15px;
   width: 100%;
   justify-content: center;
-  margin-top: 0.625rem;
+  margin-top: 1rem;
 }
 
 .indicatorContainer {
