--- a/ecoTrack/src/components/newprice.module.css
+++ b/ecoTrack/src/components/newprice.module.css
@@ -3,6 +3,68 @@
   flex-direction: column; */
 }
 
-.currentPrice {
+/* .currentPrice {
   place-content: end;
+} */
+
+.sideBar {
+  /* width: 300px; */
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  padding: 15px;
+  margin-top: 1rem;
+}
+
+.rateIncrease {
+  padding: 0 15px;
+  color: #d32f2f;
+}
+
+.rateDecrease {
+  padding: 0 15px;
+  color: #388e3c;
+}
+
+.itemCol1,
+.newPrice1,
+.rateDecrease1 {
+  padding-top: 1.25rem;
+}
+
+.newPrice,
+.oldPrice {
+  color: #333;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.itemColLast,
+.newPriceLast,
+.rateDecreaseLast {
+  padding: 0rem 15px 0 15px;
+}
+
+.newPrice,
+.itemCol,
+.rateIncrease,
+.rateDecrease {
+  padding: 0 15px 0.75rem 15px;
+}
+
+.oldPrice {
+  text-decoration: line-through;
+}
+
+.header select {
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 0.75rem;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
 }
