--- a/ecoTrack/src/components/topbar.module.css
+++ b/ecoTrack/src/components/topbar.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
 }
 
 .container h1 {
