--- a/ecoTrack/src/components/userprofile.module.css
+++ b/ecoTrack/src/components/userprofile.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: end;
   gap: 2.25rem;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   padding-right: 1.5rem;
 }
 
