--- a/ecoTrack/src/components/budget/budgetallocation.module.css
+++ b/ecoTrack/src/components/budget/budgetallocation.module.css
@@ -36,18 +36,18 @@
 .allocationWrapper {
   display: flex;
   flex-direction: row;
-  justify-items: center;
+  /* justify-content: center; */
   align-content: center;
   gap: 0.75rem;
   flex-wrap: wrap;
   width: 100%;
+  margin-top: 2.5rem;
 }
 
 .allocatioContainer {
   border: 1px solid #c8c8c8;
   border-radius: 8px;
   padding: 1rem;
-  margin-top: 1.25rem;
   width: 48.5%;
 }
 
