--- a/ecoTrack/src/components/budget/inflationsummary.module.css
+++ b/ecoTrack/src/components/budget/inflationsummary.module.css
@@ -27,16 +27,32 @@ select {
   outline: none;
 }
 
+.head {
+  padding: 12px 10px;
+  text-align: left;
+  font-size: 14px;
+  /* color: #333; */
+  /* vertical-align: top; */
+}
+
+th {
+  font-weight: 600;
+  color: #666;
+  border-bottom: 1px solid #21c579;
+}
+
 .rateIncrease {
   padding: 0 15px;
   font-weight: 500;
   color: #d32f2f;
+  text-align: right;
 }
 
 .rateDecrease {
   padding: 0 15px;
   font-weight: 500;
   color: #388e3c;
+  text-align: right;
 }
 
 .itemCol1,
@@ -56,6 +72,7 @@ select {
 .rateDecreaseLast {
   color: #388e3c;
   font-weight: 500;
+  text-align: right;
 }
 
 .newPrice,
@@ -86,7 +103,7 @@ select {
   padding: 5px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  font-size: 14px;
+  font-size: 0.75rem;
   color: #333;
   margin-bottom: 0rem;
 }
