--- a/ecoTrack/src/components/sidebar.module.css
+++ b/ecoTrack/src/components/sidebar.module.css
@@ -1,9 +1,9 @@
 .sideBar {
   background-color: #b4b6bb;
-  width: 7%;
+  /* width: 7%; */
   height: 100vh;
   place-items: center;
-  padding: 0 0.75rem;
+  padding: 0 1.5rem;
 }
 
 .sideBarWrapper {
@@ -17,7 +17,7 @@
 
 .logo {
   width: 38px;
-  margin-top: 2rem;
+  padding-top: 2rem;
 }
 
 .navIcons {
