--- a/ecoTrack/src/components/tracking/analysisSummary.module.css
+++ b/ecoTrack/src/components/tracking/analysisSummary.module.css
@@ -2,13 +2,30 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding: 1rem;
+  padding: 0rem 0;
 }
 
 .sectionContainer {
-  border: 1px solid #444242;
+  background-color: #f9f9f9;
   border-radius: 8px;
   padding: 0.75rem;
+  width: 100%;
+  height: 97px;
+}
+
+.sectionContainer p {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #444242;
+  margin: 0;
+}
+
+.icon {
+  width: 40px;
+  height: 40px;
+  padding: 0.75rem;
+  border-radius: 20px;
+  background-color: #d9e0f8;
 }
 
 .title {
@@ -16,4 +33,11 @@
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
+}
+
+.title h1 {
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: #444242;
+  margin: 0;
 }
