--- a/ecoTrack/src/components/dashboardUno/dashboardbody.module.css
+++ b/ecoTrack/src/components/dashboardUno/dashboardbody.module.css
@@ -1,6 +1,5 @@
 .bodyContainer {
   display: flex;
   flex-direction: column;
-  margin-top: 2rem;
-  margin-right: 1rem;
+  margin: 2rem 1rem 2rem 0;
 }
