--- a/ecoTrack/src/components/dashboardUno/smartinsight.module.css
+++ b/ecoTrack/src/components/dashboardUno/smartinsight.module.css
@@ -1,12 +1,11 @@
 .smartInsightConatiner {
-  border: 1px solid #c8c8c8;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   border-radius: 0 8px 8px 0;
 }
 
 .header {
   font-size: 1.25rem;
-  font-weight: 600;
+  /* font-weight: 600; */
   color: #444242;
   margin-bottom: 1.25rem;
 }
@@ -15,6 +14,10 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+}
+
+ul {
+  list-style-type: disc;
 }
 
 .insights {
