--- a/ecoTrack/src/components/dashboardUno/transaction.module.css
+++ b/ecoTrack/src/components/dashboardUno/transaction.module.css
@@ -1,9 +1,9 @@
 .transactionHistory {
   width: 100%;
-  margin: 1rem 0;
+  margin-top: 1rem;
   background-color: #f9f9f9;
   border-radius: 8px;
-  padding: 1rem;
+  padding: 1.25rem;
 }
 
 .header {
