--- a/ecoTrack/src/components/tracking/ecobotinsights.module.css
+++ b/ecoTrack/src/components/tracking/ecobotinsights.module.css
@@ -1,6 +1,6 @@
 .botPredictions {
   display: flex;
+  gap: 2rem;
   background-color: #f9f9f9;
-  padding: 2rem;
-  /* margin-right: 1rem; */
+  padding: 1.5rem;
 }
