--- a/ecoTrack/src/components/sidebar.module.css
+++ b/ecoTrack/src/components/sidebar.module.css
@@ -1,23 +1,58 @@
 .sideBar {
   background-color: #b4b6bb;
   /* width: 7%; */
-  height: 100vh;
-  place-items: center;
-  padding: 0 1.5rem;
+  height: 1000px;
+  /* place-items: center; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 2rem 1.5rem;
+  transition: width 0.3s;
+}
+
+.expand {
+  width: 200px;
+}
+
+.navContainer {
+  display: flex;
+  align-items: center;
+  /* width: 2.5rem;
+  height: 2.5rem; */
+  /* border: 1px solid gray; */
+  width: 100%;
+  cursor: pointer;
+}
+
+.navContainer p {
+  font-size: 0.875rem;
+  color: #f9f9f9;
 }
 
 .sideBarWrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   height: 75%;
   margin-top: 2rem;
 }
 
 .logo {
   width: 38px;
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.logoContainer p {
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: #1c2d5e;
 }
 
 .navIcons {
@@ -35,12 +70,12 @@
 
 .icons {
   width: 2rem;
-  cursor: pointer;
 }
 
 .topContainer {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: space-evenly;
   gap: 0.75rem;
   /* height: 40%; */
@@ -49,6 +84,7 @@
 .bottomContainer {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: space-evenly;
   gap: 0.75rem;
   height: 30%;
