complete budget summary feature and side bar interactivity

--- a/ecoTrack/src/components/userprofile.module.css
+++ b/ecoTrack/src/components/userprofile.module.css
@@ -45,9 +45,15 @@
 
 .dropDown {
   width: 24px;
+  cursor: pointer;
 }
 
 .leftSideContainer {
   display: flex;
   gap: 1rem;
+}
+
+.bellIcon,
+.chatIcon {
+  cursor: pointer;
 }
