--- a/ecoTrack/src/components/sidebar.module.css
+++ b/ecoTrack/src/components/sidebar.module.css
@@ -1,27 +1,33 @@
 .sideBar {
   background-color: #b4b6bb;
-  /* width: 7%; */
   height: 1000px;
-  /* place-items: center; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 2rem 1.5rem;
+  padding: 2rem 1rem;
   transition: width 0.3s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .expand {
   width: 200px;
+  transform: translateX(0%);
+  transition: transform 0.3s ease-in-out;
 }
 
 .navContainer {
   display: flex;
   align-items: center;
-  /* width: 2.5rem;
-  height: 2.5rem; */
-  /* border: 1px solid gray; */
   width: 100%;
   cursor: pointer;
+  border-radius: 8px;
+}
+
+.navContainer:hover {
+  background-color: rgb(192, 192, 192);
 }
 
 .navContainer p {
@@ -34,13 +40,18 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  width: 100%;
   height: 75%;
   margin-top: 2rem;
 }
 
 .logo {
   width: 38px;
-  /* padding-top: 2rem; */
+}
+
+.navIcon {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 .logoContainer {
@@ -56,15 +67,16 @@
 }
 
 .navIcons {
-  width: 2.5rem;
+  /* width: 2.5rem;
   height: 2.5rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   border-radius: 8px;
 }
 
 .active {
+  border-radius: 8px;
   background-color: #1c2d5e;
 }
 
@@ -77,6 +89,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
+  width: 100%;
   gap: 0.75rem;
   /* height: 40%; */
 }
@@ -87,5 +100,6 @@
   align-items: flex-start;
   justify-content: space-evenly;
   gap: 0.75rem;
-  height: 30%;
+  width: 100%;
+  /* height: 30%; */
 }
