--- a/ecoTrack/src/components/timeaxis.module.css
+++ b/ecoTrack/src/components/timeaxis.module.css
@@ -1,5 +1,6 @@
 .category2 {
   display: flex;
+  justify-content: space-between;
   margin-top: 1.125rem;
   /* margin-left: 45px; */
   border-radius: 8px;
@@ -17,6 +18,7 @@
   font-size: 0.875rem;
   padding: 0.625rem;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .label:first-child {
