--- a/ecoTrack/src/components/dashboardUno/cards.module.css
+++ b/ecoTrack/src/components/dashboardUno/cards.module.css
@@ -5,6 +5,7 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   margin-top: 2.4375rem;
+  position: relative;
 }
 
 .cardsFrame h2 {
@@ -38,10 +39,21 @@
   color: #f9f9f9;
 }
 
+.balanceContainer {
+  display: flex;
+  gap: 0.75rem;
+  align-items: center;
+}
+
 .balance {
-  margin-top: 1rem;
   font-size: 1.5rem;
   color: #f9f9f9;
+  margin-top: 1rem;
+}
+
+.hideButton {
+  width: 18px;
+  padding-top: 0.25rem;
 }
 
 .cardNumber {
@@ -53,12 +65,16 @@
 }
 
 .cardType {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-size: 1.25rem;
   font-weight: 600;
   letter-spacing: 1.5px;
   color: #f9f9f9;
   display: flex;
   justify-content: flex-end;
+  gap: 0.75rem;
 }
 
 .addCard {
@@ -74,22 +90,17 @@
   margin-top: 1rem;
 }
 
-.actions {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2rem;
+.transferScreen {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: burlywood;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.5);
+  width: 100%;
 }
 
-.actionItem {
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 4rem;
-  height: 4rem;
-  border-radius: 30px;
-  background-color: #dae3ff;
-
-  font-size: 0.75rem;
-  color: #444242;
+  justify-content: space-between;
 }
