--- a/ecoTrack/src/components/dashboardUno/transfermoney.module.css
+++ b/ecoTrack/src/components/dashboardUno/transfermoney.module.css
@@ -5,7 +5,7 @@
 
 .inputField {
   width: 100%;
-  padding: 0.35rem 0.75rem;
+  padding: 0.5rem 0.75rem;
   border-radius: 8px;
   border: none;
   outline: none;
@@ -23,4 +23,42 @@
   border: none;
   border-radius: 8px;
   margin-top: 1rem;
+}
+
+.recentContainer {
+  margin-top: 1rem;
+}
+
+.titleContainer {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem auto;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid rgb(165, 165, 165);
+}
+
+.leftSide {
+  display: flex;
+  gap: 0.32rem;
+}
+
+.titleContainer P {
+  font-size: 1rem;
+}
+
+.searchIcon {
+  width: 16px;
+}
+
+.acctInfoContainer {
+  margin-bottom: 0.5rem;
+}
+
+.acctName {
+  font-size: 1rem;
+}
+
+.acctInfo {
+  font-size: 0.875rem;
+  color: #444242;
 }
