Fix image paths and move to public

--- a/ecoTrack/src/components/budget/budgetallocation.module.css
+++ b/ecoTrack/src/components/budget/budgetallocation.module.css
@@ -67,7 +67,7 @@
   width: 13px;
   height: 13px;
   border-radius: 7px;
-  background-color: blue;
+  background-color: #1c2d5e;
 }
 
 .amountContainer {
