--- a/ecoTrack/src/components/dashboardUno/cards.module.css
+++ b/ecoTrack/src/components/dashboardUno/cards.module.css
@@ -94,17 +94,17 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: burlywood;
+  background-color: #f9f9f9;
   border-radius: 8px;
   padding: 1rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   width: 100%;
+  z-index: 100;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 0.875rem;
 }
 
 .header h1 {
