--- a/ecoTrack/src/components/dashboardUno/recenttransaction.module.css
+++ b/ecoTrack/src/components/dashboardUno/recenttransaction.module.css
@@ -3,16 +3,22 @@
   justify-content: space-between;
   margin: 1rem auto;
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid rgb(165, 165, 165);
+  border-bottom: 1px solid rgb(223, 223, 223);
 }
 
 .leftSide {
   display: flex;
-  gap: 0.32rem;
+  gap: 0.875rem;
 }
 
-.titleContainer P {
+.recents,
+.favourites {
   font-size: 1rem;
+  color: #c4c4c4;
+}
+
+.recents {
+  color: #001553;
 }
 
 .searchIcon {
@@ -20,7 +26,7 @@
 }
 
 .acctInfoContainer {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.75rem;
 }
 
 .acctName {
@@ -29,5 +35,5 @@
 
 .acctInfo {
   font-size: 0.875rem;
-  color: #444242;
+  color: #929292;
 }
