--- a/ecoTrack/src/components/sidebar.module.css
+++ b/ecoTrack/src/components/sidebar.module.css
@@ -1,12 +1,13 @@
 .sideBar {
   background-color: #b4b6bb;
-  height: 1000px;
+  /* height: 1000px; */
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 2rem 1rem;
   transition: width 0.3s;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
@@ -59,7 +60,7 @@
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  height: 75%;
+  height: 100%;
   margin-top: 2rem;
 }
 
