--- a/ecoTrack/src/pages/dashboard.module.css
+++ b/ecoTrack/src/pages/dashboard.module.css
@@ -2,6 +2,16 @@
   display: flex;
   flex-direction: row;
   gap: 1.25rem;
-  position: relative;
+  /* position: relative; */
   width: 100%;
+}
+
+.overlayContainer {
+  background-color: rgba(12, 12, 12, 0.5);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
