--- a/ecoTrack/src/components/dashboardUno/cards.module.css
+++ b/ecoTrack/src/components/dashboardUno/cards.module.css
@@ -104,10 +104,21 @@
 
 .header {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  align-items: center;
+  /* gap: 0.75rem; */
+  margin-top: 1rem;
 }
 
 .header h1 {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
+  width: 100%;
+  text-align: center;
   color: #444242;
+}
+
+.transferLeft {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
 }
