--- a/ecoTrack/styles/budgetStyles/budgetsummary.module.css
+++ b/ecoTrack/styles/budgetStyles/budgetsummary.module.css
@@ -2,7 +2,7 @@
   margin-top: 1rem;
   background-color: #f9f9f9;
   padding-top: 1.25rem;
-  padding: 1.25rem 1.25rem 2.8125rem 1.25rem;
+  padding: 1.25rem;
   border-radius: 8px;
 }
 
