--- a/ecoTrack/styles/dashboardStyles/dashboardbody.module.css
+++ b/ecoTrack/styles/dashboardStyles/dashboardbody.module.css
@@ -1,7 +1,7 @@
 .bodyContainer {
   display: flex;
   flex-direction: column;
-  margin: 2rem 1rem 0rem 0;
+  margin: 2rem 1rem 1rem 95px;
   flex: 1;
-  padding: 0 0 0 95px;
+  /* padding: 0 0 0 95px; */
 }
