--- a/ecoTrack/styles/budgetStyles/budgetallocation.module.css
+++ b/ecoTrack/styles/budgetStyles/budgetallocation.module.css
@@ -85,3 +85,11 @@
   font-size: 0.875rem;
   color: #9c9595;
 }
+
+.emptyAllocation {
+  margin: 0 auto;
+  font-size: 1.25rem;
+  font-weight: 400;
+  font-style: oblique;
+  text-align: center;
+}
