--- a/ecoTrack/styles/dashboardStyles/transfermoney.module.css
+++ b/ecoTrack/styles/dashboardStyles/transfermoney.module.css
@@ -25,6 +25,7 @@ input[type="number"]::-webkit-inner-spin-button {
   border-radius: 8px;
   background-color: #e7e7e7;
   border: none;
+  /* border: 1px solid #e7e7e7; */
   outline: none;
   margin: 0.25rem 0;
 }
