--- a/ecoTrack/styles/trackingStyles/botsummary.module.css
+++ b/ecoTrack/styles/trackingStyles/botsummary.module.css
@@ -1,13 +1,13 @@
 .header {
   font-size: 1rem;
-  font-weight: 500;
+  /* font-weight: 500; */
   color: #444242;
   margin-bottom: 0.5rem;
 }
 
 .predictionHeader {
   font-size: 1.25rem;
-  font-weight: 600;
+  /* font-weight: 600; */
   color: #444242;
   margin-bottom: 1.25rem;
 }
