--- a/ecoTrack/styles/trackingStyles/topexpense.module.css
+++ b/ecoTrack/styles/trackingStyles/topexpense.module.css
@@ -40,6 +40,7 @@
   text-align: center;
   margin: 0 auto;
   font-size: 1.25rem;
-  font-weight: 500;
+  font-weight: 400;
   font-style: italic;
+  color: #444242;
 }
