authentication of sign in and sign up function implemented with little fixes

--- a/ecoTrack/styles/dashboardStyles/outercontainer.module.css
+++ b/ecoTrack/styles/dashboardStyles/outercontainer.module.css
@@ -5,3 +5,9 @@
   gap: 1rem;
   /* width: 100%; */
 }
+
+/* .expand {
+  width: 180px;
+  transform: translateX(0%);
+  transition: transform 0.3s ease-in-out;
+} */
