--- a/ecoTrack/styles/authStyles/signUpForm.module.css
+++ b/ecoTrack/styles/authStyles/signUpForm.module.css
@@ -1,4 +1,4 @@
-form {
+.signUpForm {
   /* background-color: black; */
   display: flex;
   flex-direction: column;
@@ -6,6 +6,7 @@ form {
   justify-content: center;
   width: 50%;
   height: 100vh;
+  background-color: #f8f8f8;
 }
 
 .headerText {
@@ -20,9 +21,10 @@ form {
   /* margin-bottom: 12px; */
   padding: 0.75rem 1rem;
   width: 65%;
-  border-radius: 8px;
+  border-radius: 0px;
   border: none;
   outline: none;
+  background-color: #d7d7d7;
 }
 
 .signUpBtn {
@@ -30,5 +32,5 @@ form {
   background-color: #1c2d5e;
   width: 65%;
   padding: 0.75rem;
-  border-radius: 24px;
+  /* border-radius: 24px; */
 }
