--- a/ecoTrack/styles/authStyles/welcomeBack.module.css
+++ b/ecoTrack/styles/authStyles/welcomeBack.module.css
@@ -5,6 +5,7 @@
   background-color: #1c2d5e;
   width: 50%;
   padding: 0 50px;
+  position: relative;
 }
 
 .logo {
@@ -14,7 +15,7 @@
   font-size: 1.5rem;
   font-weight: 400;
   color: #f9f9f9;
-  position: fixed;
+  position: absolute;
   top: 50px;
   left: 50px;
 }
