--- a/ecoTrack/styles/budgetStyles/budgetsetting.module.css
+++ b/ecoTrack/styles/budgetStyles/budgetsetting.module.css
@@ -3,11 +3,16 @@
   background-color: #f9f9f9;
   padding: 1.25rem 1.25rem;
   border-radius: 8px;
+  width: 100%;
 }
 
 .budgetNameContainer {
   width: 100%;
   margin-bottom: 1rem;
+}
+
+.budgetAmountContainer {
+  width: 100%;
 }
 
 .header {
