--- a/ecoTrack/styles/utilsStyles/timeaxis.module.css
+++ b/ecoTrack/styles/utilsStyles/timeaxis.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 1.125rem;
+  gap: 0.5rem;
   /* margin-left: 45px; */
   border-radius: 8px;
   border: 1px solid #dadada;
