--- a/ecoTrack/src/pages/dashboard.module.css
+++ b/ecoTrack/src/pages/dashboard.module.css
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: row;
   gap: 1.25rem;
-  /* position: relative; */
+  position: relative;
   width: 100%;
+  height: 100vh;
 }
 
 .overlayContainer {
@@ -14,4 +15,40 @@
   top: 0;
   left: 0;
   z-index: 2;
+}
+
+.logOutContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  padding: 1.25rem;
+  text-align: center;
+}
+
+.logOutHeader {
+  font-size: 1.125rem;
+  color: #444242;
+}
+
+.buttonContainer {
+  margin-top: 1rem;
+}
+
+.cancelButton {
+  margin-right: 0.75rem;
+  padding: 0.5rem 0.875rem;
+  border-radius: 8px;
+  background-color: #1c2d5e;
+  color: #f9f9f9;
+}
+
+.logoutButton {
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  border: 1px solid #1c2d5e;
+  box-sizing: border-box;
 }
