--- a/ecoTrack/styles/dashboardStyles/transfermoney.module.css
+++ b/ecoTrack/styles/dashboardStyles/transfermoney.module.css
@@ -21,18 +21,19 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .inputField {
   width: 100%;
-  padding: 0.5rem 0.75rem;
+  padding: 0.625rem 0.75rem;
   border-radius: 8px;
   background-color: #e7e7e7;
+  color: #333333;
+  font-size: 15px;
   border: none;
-  /* border: 1px solid #e7e7e7; */
   outline: none;
   margin: 0.25rem 0;
 }
 
 .inputField::placeholder {
   font-size: 0.875rem;
-  color: #acb1c0;
+  color: #6b7280;
 }
 
 .ctaButton {
